crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__closed_local_comptime_includes_its_reachable_helper.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nmain : unit\nmain =\n    let\n        helper x = x\n    in\n    comptime (helper ())\n"
---
--- unoptimized Core
let helper#2 : 'erased -> 'erased = \x#5 : 'erased -> x#5 in
let main#1 : unit = () in
let fromUnit#3 : unit -> unit = \value#4 : unit -> value#4 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam helper_2
    [(lam main_1 [(lam fromUnit_3 main_1) (lam value_4 value_4)]) (con unit ())])
    (lam x_5 x_5)])
--- optimized Core
()
--- optimized UPLC
(program 1.1.0 (con unit ()))
--- result
(con unit ())
--- logs
[]
--- budget
cpu: 160100, memory: 1100
