crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__constructor_pattern_tail_reused_by_field_access.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 1493
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype Record = Record { a : Int, b : Int, c : Int, d : Int }\nselect : Record -> int\nselect r =\n    case r of\n        Record { b } -> Builtin.addInteger (Builtin.unIData b) (Builtin.unIData r.c)\nmain = select (Record { a = 1, b = 2, c = 3, d = 4 })\n"
---
--- unoptimized Core
let select#2 : Main.Record -> int = \r#8 : Main.Record -> let match#14 : Main.Record = r#8 in
let projection#24 : pair int (list Data) = unConstrData match#14 in
case@Pair projection#24 of
  Pair tag#19 fields#20 -> case@List fields#20 of
    Cons ignored#21 fieldTail#22 -> case@List fieldTail#22 of
      Cons field#16 fieldTail#23 -> let b#9 : Int = field#16 in
      let evaluated#25 : int = unIData b#9 in
      case@List fieldTail#23 of
        Cons head#12 tail#13 -> addInteger evaluated#25 (unIData head#12) in
let fromInt#7 : int -> Int = iData in
let main#1 : int = select#2 ((\field#3 : Int field#4 : Int field#5 : Int field#6 : Int -> constrData 0 (mkCons field#3 (mkCons field#4 (mkCons field#5 (mkCons field#6 (con (list data) [])))))) (fromInt#7 1) (fromInt#7 2) (fromInt#7 3) (fromInt#7 4)) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam select_2
    [(lam fromInt_7
      [(lam main_1 main_1)
        [select_2
          [[[[(lam field_3
            (lam field_4
              (lam field_5
                (lam field_6
                  [[(builtin constrData) (con integer 0)]
                    [[(force (builtin mkCons)) field_3]
                      [[(force (builtin mkCons)) field_4]
                        [[(force (builtin mkCons)) field_5]
                          [[(force (builtin mkCons)) field_6] (con (list data) [])]]]]]))))
            [fromInt_7 (con integer 1)]]
            [fromInt_7 (con integer 2)]]
            [fromInt_7 (con integer 3)]]
            [fromInt_7 (con integer 4)]]]])
      (builtin iData)])
    (lam r_8
      [(lam match_14
        [(lam projection_24
          (case
            projection_24
            (lam tag_19
              (lam fields_20
                (case
                  fields_20
                  (lam ignored_21
                    (lam fieldTail_22
                      (case
                        fieldTail_22
                        (lam field_16
                          (lam fieldTail_23
                            [(lam b_9
                              [(lam evaluated_25
                                (case
                                  fieldTail_23
                                  (lam head_12
                                    (lam tail_13 [[(builtin addInteger) evaluated_25] [(builtin unIData) head_12]]))
                                  (error)))
                                [(builtin unIData) b_9]])
                              field_16]))
                        (error))))
                  (error))))))
          [(builtin unConstrData) match_14]])
        r_8])])
--- optimized Core
let fromInt#35 : int -> Int = iData in
let anf#46 : Int = fromInt#35 1 in
let anf#48 : Int = fromInt#35 2 in
let anf#50 : Int = fromInt#35 3 in
let anf#52 : Int = fromInt#35 4 in
let anf#42 : list Data = mkCons anf#52 (con (list data) []) in
let anf#43 : list Data = mkCons anf#50 anf#42 in
let anf#44 : list Data = mkCons anf#48 anf#43 in
let anf#45 : list Data = mkCons anf#46 anf#44 in
let anf#53 : Main.Record = constrData 0 anf#45 in
let projection#15 : pair int (list Data) = unConstrData anf#53 in
case@Pair projection#15 of
  Pair tag#17 fields#18 -> case@List fields#18 of
    Cons ignored#26 fieldTail#27 -> case@List fieldTail#27 of
      Cons field#28 fieldTail#29 -> let evaluated#31 : int = unIData field#28 in
      case@List fieldTail#29 of
        Cons head#32 tail#33 -> let anf#41 : int = unIData head#32 in
        addInteger evaluated#31 anf#41
--- optimized UPLC
(program 1.1.0
  [(lam builtin_25
    [(lam fromInt_1
      [(lam anf_2
        [(lam anf_3
          [(lam anf_4
            [(lam anf_5
              [(lam anf_6
                [(lam anf_7
                  [(lam anf_8
                    [(lam anf_9
                      [(lam anf_10
                        [(lam projection_11
                          (case
                            projection_11
                            (lam tag_12
                              (lam fields_13
                                (case
                                  fields_13
                                  (lam ignored_14
                                    (lam fieldTail_16
                                      (case
                                        fieldTail_16
                                        (lam field_19
                                          (lam fieldTail_20
                                            [(lam evaluated_21
                                              (case
                                                fieldTail_20
                                                (lam head_22
                                                  (lam tail_23
                                                    [(lam anf_24 [[(builtin addInteger) evaluated_21] anf_24])
                                                      [(builtin unIData) head_22]]))
                                                (error)))
                                              [(builtin unIData) field_19]]))
                                        (error))))
                                  (error))))))
                          [(builtin unConstrData) anf_10]])
                        [[(builtin constrData) (con integer 0)] anf_9]])
                      [[builtin_25 anf_2] anf_8]])
                    [[builtin_25 anf_3] anf_7]])
                  [[builtin_25 anf_4] anf_6]])
                [[builtin_25 anf_5] (con (list data) [])]])
              [fromInt_1 (con integer 4)]])
            [fromInt_1 (con integer 3)]])
          [fromInt_1 (con integer 2)]])
        [fromInt_1 (con integer 1)]])
      (builtin iData)])
    (force (builtin mkCons))])
--- result
(con integer 5)
--- logs
[]
--- budget
cpu: 2060179, memory: 9986
