crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__explicit_drops_preserve_saturation_after_cached_tail.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 1508
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\nselect : list int -> bool\nselect xs =\n    let\n        first = Builtin.dropList 2 xs\n        second = Builtin.dropList 3 xs\n    in\n    if Builtin.nullList first then Builtin.nullList second else False\nmain = select [1]\n"
---
--- unoptimized Core
let fromInt#3 : int -> int = \value#8 : int -> value#8 in
let fromBool#7 : bool -> bool = \value#9 : bool -> value#9 in
let select#2 : list int -> bool = \xs#4 : list int -> let second#5 : list int = dropList (fromInt#3 3) xs#4 in
let first#6 : list int = dropList (fromInt#3 2) xs#4 in
case@Bool nullList first#6 of
  True -> nullList second#5
  False -> fromBool#7 false in
let main#1 : bool = select#2 (mkCons (fromInt#3 1) (con (list integer) [])) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_3
    [(lam fromBool_7
      [(lam select_2
        [(lam main_1 main_1)
          [select_2
            [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]] (con (list integer) [])]]])
        (lam xs_4
          [(lam second_5
            [(lam first_6
              (case
                [(force (builtin nullList)) first_6]
                [fromBool_7 (con bool False)]
                [(force (builtin nullList)) second_5]))
              [[(force (builtin dropList)) [fromInt_3 (con integer 2)]] xs_4]])
            [[(force (builtin dropList)) [fromInt_3 (con integer 3)]] xs_4]])])
      (lam value_9 value_9)])
    (lam value_8 value_8)])
--- optimized Core
let anf#23 : list int = mkCons 1 (con (list integer) []) in
let second#15 : list int = dropList 3 anf#23 in
let first#16 : list int = dropList 2 anf#23 in
let anf#21 : bool = nullList first#16 in
case@Bool anf#21 of
  True -> nullList second#15
  False -> false
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam builtin_6
      [(lam builtin_7
        [(lam anf_1
          [(lam second_2
            [(lam first_3
              [(lam anf_4 (case anf_4 (con bool False) [builtin_5 second_2]))
                [builtin_5 first_3]])
              [[builtin_6 (con integer 2)] anf_1]])
            [[builtin_6 (con integer 3)] anf_1]])
          [[builtin_7 (con integer 1)] (con (list integer) [])]])
        (force (builtin mkCons))])
      (force (builtin dropList))])
    (force (builtin nullList))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 1328535, memory: 5604
