crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__generic_impl_context_default_and_superclass_evidence_are_closed.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\ntrait Eq 'a => Same 'a where\n    same : 'a -> 'a -> bool\n    same x y = eq x y\nimpl Same int where\nimpl Eq (list 'a) => Same (list 'a) where\nuse : Same 'a => 'a -> 'a -> bool\nuse x y = if same x y then neq x y else True\nmain = use [1, 2] [1, 3]\n"
---
--- unoptimized Core
let fromBool#6 : bool -> bool = \value#10 : bool -> value#10 in
let eq#26 : int -> int -> bool = equalsInteger in
letrec
  eq#13 : list 'erased -> list 'erased -> bool [static []] = \xs#17 : list 'erased ys#18 : list 'erased -> let match#30 : list 'erased = xs#17 in
  case@List match#30 of
    Nil -> let match#19 : list 'erased = ys#18 in
    case@List match#19 of
      Nil -> fromBool#6 true
      Cons field#20 field#21 -> fromBool#6 false
    Cons field#31 field#32 -> let x#22 : 'erased = field#31 in
    let restX#23 : list 'erased = field#32 in
    let match#27 : list 'erased = ys#18 in
    case@List match#27 of
      Nil -> fromBool#6 false
      Cons field#28 field#29 -> let y#24 : 'erased = field#28 in
      let restY#25 : list 'erased = field#29 in
      case@Bool eq#26 x#22 y#24 of
        True -> eq#13 restX#23 restY#25
        False -> false
in
let same#7 : 'erased -> 'erased -> bool = \x#11 : 'erased y#12 : 'erased -> eq#13 x#11 y#12 in
let not#16 : 'erased -> bool = \value#33 : 'erased -> case@Bool (\identity#34 : bool -> identity#34) value#33 of
  True -> false
  False -> true in
let neq#8 : 'erased -> 'erased -> bool = \a#14 : 'erased b#15 : 'erased -> not#16 (eq#13 a#14 b#15) in
let use#2 : 'erased -> 'erased -> bool = \x#4 : 'erased y#5 : 'erased -> case@Bool same#7 x#4 y#5 of
  True -> neq#8 x#4 y#5
  False -> fromBool#6 true in
let fromInt#3 : int -> int = \value#9 : int -> value#9 in
let main#1 : bool = use#2 (mkCons (fromInt#3 1) (mkCons (fromInt#3 2) (con (list integer) []))) (mkCons (fromInt#3 1) (mkCons (fromInt#3 3) (con (list integer) []))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromBool_6
    [(lam eq_26
      [(lam eq_13
        [(lam same_7
          [(lam not_16
            [(lam neq_8
              [(lam use_2
                [(lam fromInt_3
                  [(lam main_1 main_1)
                    [[use_2
                      [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
                        [[(force (builtin mkCons)) [fromInt_3 (con integer 2)]] (con (list integer) [])]]]
                      [[(force (builtin mkCons)) [fromInt_3 (con integer 1)]]
                        [[(force (builtin mkCons)) [fromInt_3 (con integer 3)]] (con (list integer) [])]]]])
                  (lam value_9 value_9)])
                (lam x_4
                  (lam y_5
                    (case [[same_7 x_4] y_5] [fromBool_6 (con bool True)] [[neq_8 x_4] y_5])))])
              (lam a_14 (lam b_15 [not_16 [[eq_13 a_14] b_15]]))])
            (lam value_33
              (case [(lam identity_34 identity_34) value_33] (con bool True) (con bool False)))])
          (lam x_11 (lam y_12 [[eq_13 x_11] y_12]))])
        [(lam self_35 [self_35 self_35])
          (lam self_35
            (lam xs_17
              (lam ys_18
                [(lam match_30
                  (case
                    match_30
                    (lam field_31
                      (lam field_32
                        [(lam x_22
                          [(lam restX_23
                            [(lam match_27
                              (case
                                match_27
                                (lam field_28
                                  (lam field_29
                                    [(lam y_24
                                      [(lam restY_25
                                        (case
                                          [[eq_26 x_22] y_24]
                                          (con bool False)
                                          [[[self_35 self_35] restX_23] restY_25]))
                                        field_29])
                                      field_28]))
                                [fromBool_6 (con bool False)]))
                              ys_18])
                            field_32])
                          field_31]))
                    [(lam match_19
                      (case
                        match_19
                        (lam field_20 (lam field_21 [fromBool_6 (con bool False)]))
                        [fromBool_6 (con bool True)]))
                      ys_18]))
                  xs_17])))]])
      (builtin equalsInteger)])
    (lam value_10 value_10)])
--- optimized Core
letrec
  eq#38 : list 'erased -> list 'erased -> bool [static []] = \xs#39 : list 'erased ys#40 : list 'erased -> case@List xs#39 of
    Nil -> case@List ys#40 of
      Nil -> true
      Cons field#43 field#44 -> false
    Cons field#45 field#46 -> case@List ys#40 of
      Nil -> false
      Cons field#50 field#51 -> let anf#69 : bool = equalsInteger field#45 field#50 in
      case@Bool anf#69 of
        True -> eq#38 field#46 field#51
        False -> false
in
let anf#75 : list int = mkCons 2 (con (list integer) []) in
let anf#76 : list int = mkCons 1 anf#75 in
let anf#80 : list int = mkCons 3 (con (list integer) []) in
let anf#81 : list int = mkCons 1 anf#80 in
let anf#72 : bool = eq#38 anf#76 anf#81 in
case@Bool anf#72 of
  True -> let anf#71 : bool = eq#38 anf#76 anf#81 in
  case@Bool anf#71 of
    True -> false
    False -> true
  False -> true
--- optimized UPLC
(program 1.1.0
  [(lam builtin_22
    [(lam partial_23
      [(lam eq_15
        [(lam anf_16
          [(lam anf_17
            [(lam anf_18
              [(lam anf_19
                [(lam anf_20
                  (case
                    anf_20
                    (con bool True)
                    [(lam anf_21 (case anf_21 (con bool True) (con bool False)))
                      [[eq_15 anf_17] anf_19]]))
                  [[eq_15 anf_17] anf_19]])
                [partial_23 anf_18]])
              [[builtin_22 (con integer 3)] (con (list integer) [])]])
            [partial_23 anf_16]])
          [[builtin_22 (con integer 2)] (con (list integer) [])]])
        [(lam self_4 [self_4 self_4])
          (lam self_5
            (lam xs_6
              (lam ys_7
                (case
                  xs_6
                  (lam field_10
                    (lam field_11
                      (case
                        ys_7
                        (lam field_12
                          (lam field_13
                            [(lam anf_14
                              (case anf_14 (con bool False) [[[self_5 self_5] field_11] field_13]))
                              [[(builtin equalsInteger) field_10] field_12]]))
                        (con bool False))))
                  (case ys_7 (lam field_8 (lam field_9 (con bool False))) (con bool True))))))]])
      [builtin_22 (con integer 1)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2986214, memory: 16430
