crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__higher_kinded_default_method_accepts_a_nominal_record_alias.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype alias box 'a = { value : 'a }\ntrait Pass 'f where\n    pass : 'f 'a -> 'f 'a\n    pass x = x\n    other : 'f 'a -> 'f 'a\nimpl Pass box where\n    other x = x\nboxed : box unit\nboxed = { value = () }\nmain = (pass boxed).value\n"
---
--- unoptimized Core
let pass#2 : 'erased -> 'erased = \x#4 : 'erased -> x#4 in
let fromUnit#5 : unit -> unit = \value#6 : unit -> value#6 in
let boxed#3 : { _0 : unit } = constr 0 (fromUnit#5 ()) in
let evaluated#7 : { _0 : unit } = pass#2 boxed#3 in
let projection#8 : unit = field@0/1 evaluated#7 in
let main#1 : unit = projection#8 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam pass_2
    [(lam fromUnit_5
      [(lam boxed_3
        [(lam evaluated_7
          [(lam projection_8 [(lam main_1 main_1) projection_8])
            (case evaluated_7 (lam generated_9 generated_9))])
          [pass_2 boxed_3]])
        (constr 0 [fromUnit_5 (con unit ())])])
      (lam value_6 value_6)])
    (lam x_4 x_4)])
--- optimized Core
let boxed#13 : { _0 : unit } = constr 0 () in
field@0/1 boxed#13
--- optimized UPLC
(program 1.1.0
  [(lam boxed_1 (case boxed_1 (lam generated_2 generated_2)))
    (constr 0 (con unit ()))])
--- result
(con unit ())
--- logs
[]
--- budget
cpu: 464100, memory: 3000
