crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__implementation_method_only_type_variables_match_by_type.snap
---
source: crates/nash-codegen/src/build/tests.rs
assertion_line: 239
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'b -> 'b\nimpl Keep (list 'b) where\n    keep _ value = value\nmain : bool\nmain = keep [()] True\n"
---
--- unoptimized Core
let keep#2 : list 'erased -> 'erased -> 'erased = \arg#5 : list 'erased value#6 : 'erased -> let match#7 : list 'erased = arg#5 in
value#6 in
let fromUnit#3 : unit -> unit = \value#8 : unit -> value#8 in
let fromBool#4 : bool -> bool = \value#9 : bool -> value#9 in
let main#1 : bool = keep#2 (mkCons (fromUnit#3 ()) (con (list unit) [])) (fromBool#4 true) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam keep_2
    [(lam fromUnit_3
      [(lam fromBool_4
        [(lam main_1 main_1)
          [[keep_2
            [[(force (builtin mkCons)) [fromUnit_3 (con unit ())]] (con (list unit) [])]]
            [fromBool_4 (con bool True)]]])
        (lam value_9 value_9)])
      (lam value_8 value_8)])
    (lam arg_5 (lam value_6 [(lam match_7 value_6) arg_5]))])
--- optimized Core
let anf#20 : list unit = mkCons () (con (list unit) []) in
true
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    [(lam anf_1 (con bool True)) [[builtin_2 (con unit ())] (con (list unit) [])]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 600462, memory: 3432
